--- a/VendingMachine/Views/Home/popup.cshtml
+++ b/VendingMachine/Views/Home/popup.cshtml
@@ -14,10 +14,10 @@
                     <a id="coinLeft"></a>
                 </div>
                 <div>
-                    <button id="one" class="btn btn-primary buttonRadius" onclick="clickCoin()">1</button>
-                    <button id="two" class="btn btn-primary buttonRadius ">2</button>
-                    <button id="five" class="btn btn-primary buttonRadius ">5</button>
-                    <button id="ten" class="btn btn-primary buttonRadius ">10</button>
+                    <button id="one" class="btn btn-primary buttonRadius" onclick="coinOne(getProduct.id, 1)">1</button>
+                    <button id="two" class="btn btn-primary buttonRadius" onclick="">2</button>
+                    <button id="five" class="btn btn-primary buttonRadius " onclick="">5</button>
+                    <button id="ten" class="btn btn-primary buttonRadius " onclick="">10</button>
                 </div>
             </div>
             <div class="modal-footer">
