Добавил адд едит ремув

--- a/VendingMachine/Views/Home/Index.cshtml
+++ b/VendingMachine/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
             <div class="product-item">
                 <img src="@product.Img">
                 <div class="product-buttons">
-                    <a type="button" class="button" onclick="showModal(@product.Id)">Купить</a>
+                    <a type="button" class="button" onclick="showModalBuy(@product.Id)">Купить</a>
                     <div class="product-title">
                         <a>@product.Name</a>
                         <span class="product-price">₽ @product.Price</span>
